# WarehouseStore

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/accounts/: middlewares.py  models.py
app/fixtures/: store_1.json  warehouse_1.json
app/main/: asgi.py  settings.py  urls.py  wsgi.py
app/main/settings/: common.py  store.py  warehouse.py
app/orders/: models.py  services.py
app/store/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
app/store/migrations/: 0001_initial.py
app/utils/: models.py
app/warehouse/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app/warehouse/migrations/: 0001_initial.py
